--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,32 +1,23 @@
-::ng-deep .mat-tab-header {
-    border-bottom: none;
+.body-section {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: block;
+    position: relative;
+    padding: 2px;
+    border-radius: 4px;
 }
 
-::ng-deep .mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar {
-    background-color: #3f51b5;
-    height: 3px;
+.container {
+    margin: auto;
+    margin-top: 60px;
+    padding: auto;
 }
 
-.mat-tab-group {
-    height: 61px;
-    box-shadow: rgb(0 0 0 / 25%) 0px 0.0625em 0.0625em, rgb(0 0 0 / 25%) 0px 0.125em 0.5em, rgb(255 255 255 / 10%) 0px 0px 0px 1px inset;
+.text-center {
+    text-align: center;
 }
-::ng-deep .mat-tab-label {
-    height: 60px !important;
-}
-.tab-index {
-    width: 24px;
-    height: 24px;
-    background: #3f51b5;
-    color: white;
-    border-radius: 50%;
-    padding: 0;
-    display: inline-flex;
+.row-center {
+    display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.tab-group {
-    width: fit-content;
-    box-shadow: none;
 }
