--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,3 +21,9 @@
     align-items: center;
     justify-content: center;
 }
+.row {
+    display: flex;
+}
+.column {
+    flex-direction: column;
+}
