--- a/src/app/pages/personal-data/personal-data.component.html
+++ b/src/app/pages/personal-data/personal-data.component.html
@@ -1,1 +1,157 @@
-<p>personal-data works!</p>
+<div class="stepper-wrapper body-section personal-data-content">
+  <!-- USER BASIC DATA -->
+  <div>
+    <h1 class="welcome-title mb-5 mt-3">
+      Welcome, {{ userService.currentUser.getValue()?.name }}
+    </h1>
+
+    <div class="p-3 basic-personal-data mb-5">
+      <p>AGE = {{ user.age ? user.age : "Not Entered" }}</p>
+      <p>WEIGHT = {{ user.weight ? user.weight : "Not Entered" }}</p>
+      <p>HEIGHT = {{ user.height ? user.height : "Not Entered" }}</p>
+      <p>GENDER = {{ user.gender ? user.gender : "Not Entered" }}</p>
+      <p>
+        ACTIVITY LEVEL =
+        {{ user.activity_level ? user.activity_level : "Not Entered" }}
+      </p>
+      <button mat-raised-button sm color="primary" (click)="editData()">EDIT DATA</button>
+    </div>
+    <div class="row mx-3">
+      <!-- BMI DATA -->
+      <div class="p-3 bmi-data-wrapper">
+        <h1>Body mass index</h1>
+        <div class="bmi-data pt-2">
+          <div class="row column" style="text-align:center">
+            <h3 class="mb-2">BMI</h3>
+            <p>{{ user?.user_analytics?.bmi }}</p>
+          </div>
+          <div class="row column" style="text-align:center">
+            <h3 class="mb-2">Healthy bmi range</h3>
+            <p>{{ user?.user_analytics?.healthy_bmi_range }}</p>
+          </div>
+          <div class="row column" style="text-align:center">
+            <h3 class="mb-2">Health</h3>
+            <p>{{ user?.user_analytics?.health }}</p>
+          </div>
+        </div>
+      </div>
+      <!-- IDEAL WEIGHT DATA -->
+      <div class="p-3 bmi-data-wrapper ideal-weight">
+        <h1>Ideal weight</h1>
+        <div class="bmi-data pt-2">
+          <span
+            >Ideal weight based on your gender and height should be
+            <p class="mx-1">
+              {{ user?.user_analytics?.ideal_weight | number: "1.2-2" }} kg
+            </p></span
+          >
+        </div>
+      </div>
+    </div>
+    <div class="row mx-3">
+      
+      <div class="info-wrapper">
+        <h3>Extreme weight gain</h3>
+        <p>
+          CALORY={{
+            user.user_analytics?.weight_goals?.extreme_weight_gain?.calory
+          }}
+        </p>
+        <p>
+          WEIGHT=+{{
+            user.user_analytics?.weight_goals?.extreme_weight_gain?.weight
+          }}
+        </p>
+      </div>
+      <div class="info-wrapper">
+        <h3>Weight gain</h3>
+        <p>
+          CALORY= {{ user.user_analytics?.weight_goals?.weight_gain?.calory }}
+        </p>
+        <p>
+          WEIGHT= +{{ user.user_analytics?.weight_goals?.weight_gain?.weight }}
+        </p>
+      </div>
+      <div class="info-wrapper">
+        <h3>Mild weight gain</h3>
+        <p>
+          CALORY={{
+            user.user_analytics?.weight_goals?.mild_weight_gain?.calory
+          }}
+        </p>
+        <p>
+          WEIGHT=+{{
+            user.user_analytics?.weight_goals?.mild_weight_gain?.weight
+          }}
+        </p>
+      </div>
+      <div class="info-wrapper">
+        <h3>Maintain weight</h3>
+        <p>CALORY ={{ user.user_analytics?.weight_goals?.maintain_weight }}</p>
+      </div>
+      <div class="info-wrapper">
+        <h3>Mild weight loss</h3>
+        <p>
+          CALORY={{
+            user.user_analytics?.weight_goals?.mild_weight_loss?.calory
+          }}
+        </p>
+        <p>
+          WEIGHT=-{{
+            user.user_analytics?.weight_goals?.mild_weight_loss?.weight
+          }}
+        </p>
+      </div>
+      <div class="info-wrapper">
+        <h3>Weight loss</h3>
+        <p>
+          CALORY= {{ user.user_analytics?.weight_goals?.weight_loss?.calory }}
+        </p>
+        <p>
+          WEIGHT= -{{user.user_analytics?.weight_goals?.weight_loss?.weight }}
+        </p>
+      </div>
+      <div class="info-wrapper">
+        <h3>Extreme weight loss</h3>
+        <p>
+          CALORY={{
+            user.user_analytics?.weight_goals?.extreme_weight_loss?.calory
+          }}
+        </p>
+        <p>
+          WEIGHT=-{{
+            user.user_analytics?.weight_goals?.extreme_weight_loss?.weight
+          }}
+        </p>
+      </div>
+      <div class="info-wrapper">
+        <h3>BMR</h3>
+        <p>{{ user.user_analytics?.bmr }}</p>
+      </div>
+    </div>
+    <div class="row mx-3">
+      <div class="info-wrapper mt-5 mb-5" style="flex: 0.45; border: none" *ngIf="user.user_analytics?.favourite_nutrients">
+        <h1>Favourite nutrients</h1>
+        <p class="m-2" *ngFor="let nutrient of favouriteNutrientsArray; let idx = index">{{idx + 1}}. {{nutrient.food}}</p>
+      </div>
+      <div class="info-wrapper mt-5 mb-5" style="flex: 0.55; border: none;" *ngIf="user.user_analytics?.favourite_nutrients">
+        <h1>Daily calorie intake</h1>
+          <div class="today-intake m-4">
+            <h3>Today calory intake: {{todayDailyCaloriesIntake?.calories ? todayDailyCaloriesIntake?.calories : '0'}} </h3>
+          </div>
+            <mat-accordion class="accordion-wrapper">
+              <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    Recent calory intakes
+                  </mat-panel-title>
+                </mat-expansion-panel-header>
+                <h3 *ngFor="let calorie of recentCaloriesIntake" 
+                    class="recent-calory-intake">
+                    Date: {{calorie.date}} -> Calories: {{calorie.calories}}</h3>
+              </mat-expansion-panel>
+            </mat-accordion>
+      </div>
+    </div>
+  </div>
+</div>
