--- a/src/app/pages/meals/meals.component.html
+++ b/src/app/pages/meals/meals.component.html
@@ -5,7 +5,7 @@
       <input
         matInput
         [(ngModel)]="nutrientName"
-        placeholder="Start typing to search food"
+        placeholder="Start typing..."
       />
     </div>
     <!-- SELECT PARAMETERS -->
