--- a/src/app/pages/personal-data/personal-data.component.scss
+++ b/src/app/pages/personal-data/personal-data.component.scss
@@ -70,8 +70,8 @@ h3 {
 
 .info-wrapper {
     position: relative;
-    border: 1px solid lightgray;
-    flex: 0.494;
+    border: 1px solid lightgray !important;
+    flex: 0.3;
     text-align: center;
     align-items: center;
     display: flex;
