--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,9 +1,9 @@
   <div class="login-card mt-5 p-4">
     <mat-card-header class="row-center">
-      <mat-card-title>Register</mat-card-title>
+      <mat-card-title style="color: whitesmoke; font-weight: bold">Register</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form class="example-form" #loginForm="ngForm">
+      <form class="example-form" #registerForm="ngForm">
         <div class="example-full-width" cellspacing="0">
           <div>
             <input
@@ -68,9 +68,10 @@
             mat-raised-button
             sm
             grey
+            [disabled]="registerForm.invalid"
             type="submit"
             (click)="register()"
-            color="accent"
+            color="primary"
           >
             Register
           </button>
