--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/theming";
 
+
+*:not(mat-icon) {
+  font-family: 'Sora', sans-serif !important;
+}
+
 html,
 body {
   height: 100%;
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
   background: #393a3b;
   overflow-y: overlay;
 }
