--- a/src/app/pages/exercises/exercises.component.scss
+++ b/src/app/pages/exercises/exercises.component.scss
@@ -19,7 +19,7 @@
     text-transform: uppercase;
     color: whitesmoke;
     height: 45px;
-    margin-bottom: 0px;
+    margin-bottom: 14px;
 }
 
 .exercise-wrapper {
@@ -40,6 +40,7 @@
 img {
     width: 250px;
     height: 250px;
+    border-radius: 5px;
 }
 
 ::ng-deep .mat-tab-header {
