netlify deploy adapt

--- a/src/app/pages/workout-plan/workout-plan.component.html
+++ b/src/app/pages/workout-plan/workout-plan.component.html
@@ -16,7 +16,7 @@
             sm
             color="primary"
             class="mx-3"
-            (click)="createNewWorkout()"
+            (click)="setCurrentWorkoutPlanToNull()"
           >
             New Workout
           </button>
