--- a/src/app/pages/personal-data/personal-data.component.html
+++ b/src/app/pages/personal-data/personal-data.component.html
@@ -200,7 +200,7 @@
             mat-raised-button
             sm
             grey
-            (click)="deleteWorkoutPlan(workoutPlan.uniqueId)"
+            (click)="deleteWorkoutPlan(workoutPlan._id)"
           >
             Delete
           </button>
